--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "minify": "minify index.html > output/index.html",
-    "zip": "sh script/measure.sh output/index.html"
+    "minify": "minify index.html > dist/index.html",
+    "zip": "sh script/measure.sh output/index.html",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
